    rather than being a syntax error.

p.  The pattern substitution coded no longer performs quote removal on the
    pattern before trying to match it, as the pattern removal functions do.

q.  Fixed a bug that could cause core dumps when checking whether a quoted
    command name was being completed.

r.  Fixes to the pattern removal and pattern replacement expansions to deal
    with multibyte characters better.

s.  Fix to the substring expansion (${param:off[:len]}) to deal with (possibly
    multibyte) characters instead of raw bytes.

t.  Fixed a bug that caused some key bindings set in an inputrc to be ignored
    at shell startup.

u.  Fixed a bug that caused unsetting a local variable within a function to
    not work correctly.

v.  Fixed a bug that caused invalid variables to be created when using
    `read -a'.

w.  Fixed a bug that caused "$@" to expand incorrectly when used as the right
    hand side of a parameter expansion such as ${word:="$@"} if the first
    character of $IFS was not a space.

2.  Changes to Readline

a.  Change to history expansion functions to treat `^' as equivalent to word
    one, as the documention states.

b.  Some changes to the display code to improve display and redisplay of
    multibyte characters.

c.  Changes to speed up the multibyte character redisplay code.

d.  Fixed a bug in the vi-mode `E' command that caused it to skip over the
    last character of a word if invoked while point was on the word's
    next-to-last character.

e.  Fixed a bug that could cause incorrect filename quoting when
    case-insensitive completion was enabled and the word being completed
    contained backslashes quoting word break characters.

f.  Fixed a bug in redisplay triggered when the prompt string contains
    invisible characters.

g.  Fixed some display (and other) bugs encountered in multibyte locales
    when a non-ascii character was the last character on a line.
